[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Rewind.gd" type="Script" id=1]
[ext_resource path="res://videos/rewind_1.ogv" type="VideoStream" id=2]
[ext_resource path="res://videos/rewind_2.ogv" type="VideoStream" id=3]
[ext_resource path="res://videos/rewind_4.ogv" type="VideoStream" id=4]
[ext_resource path="res://videos/rewind_2_1.ogv" type="VideoStream" id=5]
[ext_resource path="res://videos/rewind_1_1.ogv" type="VideoStream" id=6]
[ext_resource path="res://videos/rewind_3.ogv" type="VideoStream" id=7]

[node name="Rewind" type="Control"]
script = ExtResource( 1 )

[node name="VideoPlayer1" type="VideoPlayer" parent="."]
visible = false
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 2 )
expand = false

[node name="VideoPlayer11" type="VideoPlayer" parent="."]
visible = false
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 6 )
expand = false

[node name="VideoPlayer2" type="VideoPlayer" parent="."]
visible = false
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 3 )
expand = false

[node name="VideoPlayer21" type="VideoPlayer" parent="."]
visible = false
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 5 )
expand = false

[node name="VideoPlayer3" type="VideoPlayer" parent="."]
visible = false
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 7 )
expand = false

[node name="VideoPlayer4" type="VideoPlayer" parent="."]
visible = false
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 4 )
expand = false

[connection signal="finished" from="VideoPlayer1" to="." method="_on_video_finished"]
[connection signal="finished" from="VideoPlayer11" to="." method="_on_video_finished"]
[connection signal="finished" from="VideoPlayer2" to="." method="_on_video_finished"]
[connection signal="finished" from="VideoPlayer21" to="." method="_on_video_finished"]
[connection signal="finished" from="VideoPlayer3" to="." method="_on_video_finished"]
[connection signal="finished" from="VideoPlayer4" to="." method="_on_video_finished"]
